--- a/schedule.html
+++ b/schedule.html
@@ -585,7 +585,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><a href="week06.html">Lecture notes and resources</a></p>
 </li>
 <li>
-<p><strong>Assignment 05:</strong> <a href="Labs/lab5-quat.html">Quazy Quaternions</a> <strong>Due Oct 21 (after fall break)</strong></p>
+<p><strong>Assignment 05:</strong> <a href="asst05-quat.html">Quazy Quaternions</a> <strong>Due Oct 21 (after fall break)</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -611,7 +611,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><strong>Skeletons</strong> <a id="week08"></a></p>
 </div>
 <div class="paragraph">
-<p>Transformations. Coordinate systems revisited. Homogeneous coordinates. Skeletons and joints</p>
+<p>Slerp. Transformations. Coordinate systems revisited. Homogeneous coordinates. Skeletons and joints</p>
 </div>
 <div class="ulist">
 <ul>
@@ -620,6 +620,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </li>
 <li>
 <p><strong>Lab (Quaternions):</strong> <a href="week08-quat-worksheet.html">Quaternions Worksheet</a>: <strong>Due Oct 21</strong></p>
+</li>
+<li>
+<p><strong>Assignment 06:</strong> <a href="asst06-transform.html">Building character</a>: <strong>Due Oct 28</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -776,7 +779,7 @@ Transitions. Reorienting a motion. Crossfading.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-10-17 16:39:46 -0400
+Last updated 2021-10-22 17:55:00 -0400
 </div>
 </div>
 </body>
