--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><a href="week06.html">Lecture notes and resources</a></p>
 </li>
 <li>
-<p><strong>Assignment 05:</strong> <a href="Labs/lab5-quat.html">Quazy Quaternions</a> <strong>Due Oct 21 (after fall break)</strong></p>
+<p><strong>Assignment 05:</strong> <a href="asst05-quat.html">Quazy Quaternions</a> <strong>Due Oct 21 (after fall break)</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -226,7 +226,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><strong>Skeletons</strong> <a id="week08"></a></p>
 </div>
 <div class="paragraph">
-<p>Transformations. Coordinate systems revisited. Homogeneous coordinates. Skeletons and joints</p>
+<p>Slerp. Transformations. Coordinate systems revisited. Homogeneous coordinates. Skeletons and joints</p>
 </div>
 <div class="ulist">
 <ul>
@@ -235,6 +235,9 @@ on lecture content, worksheets, and assignments.</p>
 </li>
 <li>
 <p><strong>Lab (Quaternions):</strong> <a href="week08-quat-worksheet.html">Quaternions Worksheet</a>: <strong>Due Oct 21</strong></p>
+</li>
+<li>
+<p><strong>Assignment 06:</strong> <a href="asst06-transform.html">Building character</a>: <strong>Due Oct 28</strong></p>
 </li>
 </ul>
 </div></div></td>
