--- a/schedule.html
+++ b/schedule.html
@@ -616,7 +616,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p>Lengyel Chpt 4, Parent Chpt 2</p>
+<p>Lengyel Chpt 4, Parent Chpt 2 <a href="week08.html">Additional Resources</a></p>
 </li>
 <li>
 <p><strong>Lab (Quaternions):</strong> <a href="week08-quat-worksheet.html">Quaternions Worksheet</a>: <strong>Due Oct 21</strong></p>
@@ -634,19 +634,13 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><strong>Characters and motion</strong> <a id="week09"></a></p>
 </div>
 <div class="paragraph">
-<p>More Articulated Characters. Skeleton Example. Tree traversal review. Forward Kinematics.
-Motion. Poses. Motion Representation. Motion Capture. Procedural animation.</p>
+<p>More Articulated Characters. Tree traversal review.
+Motion. Motion Representation. Motion Capture. Procedural animation.</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
 <p><strong>NO CLASS Oct 26!!</strong></p>
-</li>
-<li>
-<p>Butterfly: <a href="Labs/AButterfly.cpp.txt">Skeleton I</a></p>
-</li>
-<li>
-<p><a href="SkeletonExamples.pd">Skeleton FK Example</a></p>
 </li>
 <li>
 <p><a href="Q3Guide.html">Quiz3 Study Guide</a>: Rotations</p>
@@ -779,7 +773,7 @@ Transitions. Reorienting a motion. Crossfading.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-10-22 17:55:00 -0400
+Last updated 2021-10-23 15:33:06 -0400
 </div>
 </div>
 </body>
