--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 <div class="ulist">
 <ul>
 <li>
-<p><strong>Assignment 05:</strong> <a href="asst05-quat.html">Quazy Quaternions</a>: <strong>Due Oct 22</strong></p>
+<p><strong>Assignment 06:</strong> <a href="asst06-transform.html">Building character</a>: <strong>Due Oct 29</strong></p>
 </li>
 <li>
-<p><strong>Lab (Quaternions):</strong> <a href="week08-quat-worksheet.html">Quaternions Worksheet</a>: <strong>Due Oct 21</strong></p>
+<p><strong>Lab (Transforms):</strong> <a href="week09-xform-worksheet.html">Transformation Worksheet</a>: <strong>Due Oct 21</strong></p>
 </li>
 </ul>
 </div>
@@ -231,7 +231,7 @@ on lecture content, worksheets, and assignments.</p>
 <div class="ulist">
 <ul>
 <li>
-<p>Lengyel Chpt 4, Parent Chpt 2</p>
+<p>Lengyel Chpt 4, Parent Chpt 2 <a href="week08.html">Additional Resources</a></p>
 </li>
 <li>
 <p><strong>Lab (Quaternions):</strong> <a href="week08-quat-worksheet.html">Quaternions Worksheet</a>: <strong>Due Oct 21</strong></p>
@@ -249,19 +249,13 @@ on lecture content, worksheets, and assignments.</p>
 <p><strong>Characters and motion</strong> <a id="week09"></a></p>
 </div>
 <div class="paragraph">
-<p>More Articulated Characters. Skeleton Example. Tree traversal review. Forward Kinematics.
-Motion. Poses. Motion Representation. Motion Capture. Procedural animation.</p>
+<p>More Articulated Characters. Tree traversal review.
+Motion. Motion Representation. Motion Capture. Procedural animation.</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
 <p><strong>NO CLASS Oct 26!!</strong></p>
-</li>
-<li>
-<p>Butterfly: <a href="Labs/AButterfly.cpp.txt">Skeleton I</a></p>
-</li>
-<li>
-<p><a href="SkeletonExamples.pd">Skeleton FK Example</a></p>
 </li>
 <li>
 <p><a href="Q3Guide.html">Quiz3 Study Guide</a>: Rotations</p>
@@ -727,7 +721,7 @@ know that help and support are available. Staff members are trained to support s
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-10-17 16:39:46 -0400
+Last updated 2021-10-23 15:29:55 -0400
 </div>
 </div>
 </body>
