--- a/week08.html
+++ b/week08.html
@@ -36,10 +36,10 @@
 </ul>
 </div>
 <div class="paragraph">
-<p><a href="">Lecture 10/19/2021</a>,<a href="Notes/Lecture13-10.19.2021.pdf">Notes</a></p>
+<p>See slack for the notes from 10/19/2021.</p>
 </div>
 <div class="paragraph">
-<p><a href="">Lecture 10/21/2021</a>,<a href="Notes/Lecture14-10.21.2021.pdf">Notes</a></p>
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=f975df93-c187-40a3-9293-adca0140af1a">Lecture 10/21/2021</a>,<a href="Notes/Lecture14-10.21.2021.pdf">Notes</a></p>
 </div>
 <div class="paragraph">
 <p>Additional Resources:</p>
@@ -65,7 +65,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-10-13 15:51:56 -0400
+Last updated 2021-10-23 15:30:42 -0400
 </div>
 </div>
 </body>
