--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <p><strong>Assignment 06:</strong> <a href="asst06-transform.html">Building character</a>: <strong>Due Oct 29</strong></p>
 </li>
 <li>
-<p><strong>Lab (Transforms):</strong> <a href="week09-xform-worksheet.html">Transformation Worksheet</a>: <strong>Due Oct 21</strong></p>
+<p><strong>Lab (Transforms):</strong> <a href="week09-xform-worksheet.html">Transformation Worksheet</a>: <strong>Due Oct 28</strong></p>
 </li>
 </ul>
 </div>
@@ -237,7 +237,7 @@ on lecture content, worksheets, and assignments.</p>
 <p><strong>Lab (Quaternions):</strong> <a href="week08-quat-worksheet.html">Quaternions Worksheet</a>: <strong>Due Oct 21</strong></p>
 </li>
 <li>
-<p><strong>Assignment 06:</strong> <a href="asst06-transform.html">Building character</a>: <strong>Due Oct 28</strong></p>
+<p><strong>Assignment 06:</strong> <a href="asst06-transform.html">Building character</a>: <strong>Due Oct 29</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -259,6 +259,9 @@ Motion. Motion Representation. Motion Capture. Procedural animation.</p>
 </li>
 <li>
 <p><a href="Q3Guide.html">Quiz3 Study Guide</a>: Rotations</p>
+</li>
+<li>
+<p><strong>Lab (Transforms):</strong> <a href="week09-xform-worksheet.html">Transform Worksheet</a>: <strong>Due Oct 28</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -721,7 +724,7 @@ know that help and support are available. Staff members are trained to support s
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-10-23 15:29:55 -0400
+Last updated 2021-10-24 08:35:36 -0400
 </div>
 </div>
 </body>
