--- a/schedule.html
+++ b/schedule.html
@@ -622,7 +622,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><strong>Lab (Quaternions):</strong> <a href="week08-quat-worksheet.html">Quaternions Worksheet</a>: <strong>Due Oct 21</strong></p>
 </li>
 <li>
-<p><strong>Assignment 06:</strong> <a href="asst06-transform.html">Building character</a>: <strong>Due Oct 28</strong></p>
+<p><strong>Assignment 06:</strong> <a href="asst06-transform.html">Building character</a>: <strong>Due Oct 29</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -644,6 +644,9 @@ Motion. Motion Representation. Motion Capture. Procedural animation.</p>
 </li>
 <li>
 <p><a href="Q3Guide.html">Quiz3 Study Guide</a>: Rotations</p>
+</li>
+<li>
+<p><strong>Lab (Transforms):</strong> <a href="week09-xform-worksheet.html">Transform Worksheet</a>: <strong>Due Oct 28</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -773,7 +776,7 @@ Transitions. Reorienting a motion. Crossfading.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-10-23 15:33:06 -0400
+Last updated 2021-10-24 08:35:23 -0400
 </div>
 </div>
 </body>
