--- a/schedule.html
+++ b/schedule.html
@@ -634,13 +634,15 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><strong>Characters and motion</strong> <a id="week09"></a></p>
 </div>
 <div class="paragraph">
-<p>More Articulated Characters. Tree traversal review.
-Motion. Motion Representation. Motion Capture. Procedural animation.</p>
+<p>More Articulated Characters. Scene Graph. Examples.</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
 <p><strong>NO CLASS Oct 26!!</strong></p>
+</li>
+<li>
+<p><a href="week09.html">Additional Resources</a></p>
 </li>
 <li>
 <p><a href="Q3Guide.html">Quiz3 Study Guide</a>: Rotations</p>
@@ -658,7 +660,7 @@ Motion. Motion Representation. Motion Capture. Procedural animation.</p>
 <p><strong>Motion Editing</strong> <a id="week10"></a></p>
 </div>
 <div class="paragraph">
-<p>Motion editing. Blending. Splicing. Interpolation. Transitions.
+<p>Motion representations. Motion editing. Blending. Splicing. Interpolation. Transitions.
 Transitions. Reorienting a motion. Crossfading.</p>
 </div>
 <div class="ulist">
@@ -776,7 +778,7 @@ Transitions. Reorienting a motion. Crossfading.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-10-24 08:35:23 -0400
+Last updated 2021-10-29 12:12:55 -0400
 </div>
 </div>
 </body>
