--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
 <p><strong>Assignment 06:</strong> <a href="asst06-transform.html">Building character</a>: <strong>Due Oct 29</strong></p>
 </li>
 <li>
-<p><strong>Lab (Transforms):</strong> <a href="week09-xform-worksheet.html">Transformation Worksheet</a>: <strong>Due Oct 28</strong></p>
+<p><strong>Lab (Transforms):</strong> <a href="week09-xform-worksheet.html">Transformation Worksheet</a>: <strong>Extension: Due Nov 2</strong></p>
+</li>
+<li>
+<p><strong>Quiz 3 (Nov 4)</strong></p>
 </li>
 </ul>
 </div>
@@ -249,13 +252,15 @@ on lecture content, worksheets, and assignments.</p>
 <p><strong>Characters and motion</strong> <a id="week09"></a></p>
 </div>
 <div class="paragraph">
-<p>More Articulated Characters. Tree traversal review.
-Motion. Motion Representation. Motion Capture. Procedural animation.</p>
+<p>More Articulated Characters. Scene Graph. Examples.</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
 <p><strong>NO CLASS Oct 26!!</strong></p>
+</li>
+<li>
+<p><a href="week09.html">Additional Resources</a></p>
 </li>
 <li>
 <p><a href="Q3Guide.html">Quiz3 Study Guide</a>: Rotations</p>
@@ -273,7 +278,7 @@ Motion. Motion Representation. Motion Capture. Procedural animation.</p>
 <p><strong>Motion Editing</strong> <a id="week10"></a></p>
 </div>
 <div class="paragraph">
-<p>Motion editing. Blending. Splicing. Interpolation. Transitions.
+<p>Motion representations. Motion editing. Blending. Splicing. Interpolation. Transitions.
 Transitions. Reorienting a motion. Crossfading.</p>
 </div>
 <div class="ulist">
@@ -724,7 +729,7 @@ know that help and support are available. Staff members are trained to support s
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-10-24 08:35:36 -0400
+Last updated 2021-10-29 12:13:51 -0400
 </div>
 </div>
 </body>
