--- a/index.html
+++ b/index.html
@@ -40,10 +40,7 @@
 <div class="ulist">
 <ul>
 <li>
-<p><strong>Assignment 06:</strong> <a href="asst06-transform.html">Building character</a>: <strong>Due Oct 29</strong></p>
-</li>
-<li>
-<p><strong>Lab (Transforms):</strong> <a href="week09-xform-worksheet.html">Transformation Worksheet</a>: <strong>Extension: Due Nov 2</strong></p>
+<p><strong>Assignment 07:</strong> <a href="asst07-motion.html">Motion</a>: <strong>Due Nov 5</strong></p>
 </li>
 <li>
 <p><strong>Quiz 3 (Nov 4)</strong></p>
@@ -268,6 +265,9 @@ on lecture content, worksheets, and assignments.</p>
 <li>
 <p><strong>Lab (Transforms):</strong> <a href="week09-xform-worksheet.html">Transform Worksheet</a>: <strong>Due Oct 28</strong></p>
 </li>
+<li>
+<p><strong>Assignment 07:</strong> <a href="asst07-motion.html">Motion</a>: <strong>Due Nov 5</strong></p>
+</li>
 </ul>
 </div></div></td>
 </tr>
@@ -287,7 +287,7 @@ Transitions. Reorienting a motion. Crossfading.</p>
 <p><strong>Quiz3 Nov 4</strong></p>
 </li>
 <li>
-<p><strong>Assignment 08:</strong> <a href="Labs/lab8-blend.html">Cross-fade away!</a>: <strong>Due Nov 11</strong></p>
+<p><strong>Assignment 08:</strong> <a href="asst08-blend.html">Cross-fade away!</a>: <strong>Due Nov 12</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -729,7 +729,7 @@ know that help and support are available. Staff members are trained to support s
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-10-29 12:13:51 -0400
+Last updated 2021-10-31 08:29:40 -0400
 </div>
 </div>
 </body>
