--- a/schedule.html
+++ b/schedule.html
@@ -650,6 +650,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li>
 <p><strong>Lab (Transforms):</strong> <a href="week09-xform-worksheet.html">Transform Worksheet</a>: <strong>Due Oct 28</strong></p>
 </li>
+<li>
+<p><strong>Assignment 07:</strong> <a href="asst07-motion.html">Motion</a>: <strong>Due Nov 5</strong></p>
+</li>
 </ul>
 </div></div></td>
 </tr>
@@ -669,7 +672,7 @@ Transitions. Reorienting a motion. Crossfading.</p>
 <p><strong>Quiz3 Nov 4</strong></p>
 </li>
 <li>
-<p><strong>Assignment 08:</strong> <a href="Labs/lab8-blend.html">Cross-fade away!</a>: <strong>Due Nov 11</strong></p>
+<p><strong>Assignment 08:</strong> <a href="asst08-blend.html">Cross-fade away!</a>: <strong>Due Nov 12</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -778,7 +781,7 @@ Transitions. Reorienting a motion. Crossfading.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-10-29 12:12:55 -0400
+Last updated 2021-10-31 08:29:13 -0400
 </div>
 </div>
 </body>
