--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <p><strong>Assignment 07:</strong> <a href="asst07-motion.html">Motion</a>: <strong>Due Nov 5</strong></p>
 </li>
 <li>
-<p><strong>Quiz 3 (Nov 4)</strong></p>
+<p><strong>Quiz 3 (Nov 4): Rotations</strong>, 30 minutes, in lab (<a href="Q3Guide.html">Quiz3 Study Guide</a>)</p>
 </li>
 </ul>
 </div>
@@ -278,13 +278,16 @@ on lecture content, worksheets, and assignments.</p>
 <p><strong>Motion Editing</strong> <a id="week10"></a></p>
 </div>
 <div class="paragraph">
-<p>Motion representations. Motion editing. Blending. Splicing. Interpolation. Transitions.
-Transitions. Reorienting a motion. Crossfading.</p>
+<p>Matrix Stack. Fixed-frame vs. Key-framed motion. Motion editing: Blending. Splicing. Interpolation. Transitions.
+Reorienting a motion. Crossfading.</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p><strong>Quiz3 Nov 4</strong></p>
+<p><a href="week10.html">Additional Resources</a></p>
+</li>
+<li>
+<p><strong>Quiz3 Nov 4</strong>: <a href="Q3Guide.html">Quiz3 Study Guide</a>: Rotations</p>
 </li>
 <li>
 <p><strong>Assignment 08:</strong> <a href="asst08-blend.html">Cross-fade away!</a>: <strong>Due Nov 12</strong></p>
@@ -729,7 +732,7 @@ know that help and support are available. Staff members are trained to support s
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-10-31 08:29:40 -0400
+Last updated 2021-11-03 13:01:45 -0400
 </div>
 </div>
 </body>
