--- a/schedule.html
+++ b/schedule.html
@@ -663,13 +663,16 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p><strong>Motion Editing</strong> <a id="week10"></a></p>
 </div>
 <div class="paragraph">
-<p>Motion representations. Motion editing. Blending. Splicing. Interpolation. Transitions.
-Transitions. Reorienting a motion. Crossfading.</p>
+<p>Matrix Stack. Fixed-frame vs. Key-framed motion. Motion editing: Blending. Splicing. Interpolation. Transitions.
+Reorienting a motion. Crossfading.</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p><strong>Quiz3 Nov 4</strong></p>
+<p><a href="week10.html">Additional Resources</a></p>
+</li>
+<li>
+<p><strong>Quiz3 Nov 4</strong>: <a href="Q3Guide.html">Quiz3 Study Guide</a>: Rotations</p>
 </li>
 <li>
 <p><strong>Assignment 08:</strong> <a href="asst08-blend.html">Cross-fade away!</a>: <strong>Due Nov 12</strong></p>
@@ -781,7 +784,7 @@ Transitions. Reorienting a motion. Crossfading.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-10-31 08:29:13 -0400
+Last updated 2021-11-03 13:02:05 -0400
 </div>
 </div>
 </body>
