--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ Reorienting a motion. Crossfading.</p>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="Labs/ikccd.ogv">CCD demo</a></p>
+<p><a href="week11.html">Additional Resources</a></p>
 </li>
 <li>
 <p><a href="Q4Guide.html">Quiz4 Study Guide</a>: Transformations</p>
