--- a/schedule.html
+++ b/schedule.html
@@ -692,7 +692,7 @@ Reorienting a motion. Crossfading.</p>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="Labs/ikccd.ogv">CCD demo</a></p>
+<p><a href="week11.html">Additional Resources</a></p>
 </li>
 <li>
 <p><a href="Q4Guide.html">Quiz4 Study Guide</a>: Transformations</p>
@@ -784,7 +784,7 @@ Reorienting a motion. Crossfading.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-11-07 15:27:54 -0500
+Last updated 2021-11-10 14:00:22 -0500
 </div>
 </div>
 </body>
