--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
 <li>
 <p><strong>Assignment 08:</strong> <a href="asst08-blend.html">Blending in</a>: <strong>Due Nov 12</strong></p>
 </li>
+<li>
+<p><strong>Quiz 4 (Nov 18)</strong> <a href="Q4Guide.html">Quiz4 Study Guide</a>: Transformations</p>
+</li>
 </ul>
 </div>
 </div>
@@ -345,7 +348,7 @@ Reorienting a motion. Crossfading.</p>
 <p>Simple force particle: <a href="Labs/forceParticle.cpp.txt">Code</a></p>
 </li>
 <li>
-<p><strong>Quiz4 Nov 16</strong></p>
+<p><strong>Quiz4 Nov 18</strong></p>
 </li>
 </ul>
 </div></div></td>
@@ -729,7 +732,7 @@ know that help and support are available. Staff members are trained to support s
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-11-07 15:27:54 -0500
+Last updated 2021-11-10 14:02:38 -0500
 </div>
 </div>
 </body>
