assignment 9; week11 notes

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <div class="ulist">
 <ul>
 <li>
-<p><strong>Assignment 08:</strong> <a href="asst08-blend.html">Blending in</a>: <strong>Due Nov 12</strong></p>
+<p><strong>Assignment 09:</strong> <a href="asst09-fade.html">Cross-fade away</a>: <strong>Due Nov 19</strong></p>
 </li>
 <li>
 <p><strong>Quiz 4 (Nov 18)</strong> <a href="Q4Guide.html">Quiz4 Study Guide</a>: Transformations</p>
@@ -306,6 +306,9 @@ Reorienting a motion. Crossfading.</p>
 </div>
 <div class="ulist">
 <ul>
+<li>
+<p><strong>Assignment 09:</strong> <a href="asst09-fade.html">Cross-fade away</a>: <strong>Due Nov 19</strong></p>
+</li>
 <li>
 <p><a href="week11.html">Additional Resources</a></p>
 </li>
@@ -732,7 +735,7 @@ know that help and support are available. Staff members are trained to support s
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-11-10 14:02:38 -0500
+Last updated 2021-11-13 10:13:47 -0500
 </div>
 </div>
 </body>
