--- a/schedule.html
+++ b/schedule.html
@@ -692,6 +692,9 @@ Reorienting a motion. Crossfading.</p>
 <div class="ulist">
 <ul>
 <li>
+<p><strong>Assignment 09:</strong> <a href="asst09-fade.html">Cross-fade away</a>: <strong>Due Nov 19</strong></p>
+</li>
+<li>
 <p><a href="week11.html">Additional Resources</a></p>
 </li>
 <li>
@@ -784,7 +787,7 @@ Reorienting a motion. Crossfading.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-11-10 14:02:46 -0500
+Last updated 2021-11-13 10:13:28 -0500
 </div>
 </div>
 </body>
