--- a/week11.html
+++ b/week11.html
@@ -32,6 +32,9 @@
 <p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=416dfff6-aff0-4f8f-a262-addb014a6fd2">Lecture 11/9/2021</a>, <a href="Notes/Lecture18-11.9.2021.pdf">Notes</a></p>
 </div>
 <div class="paragraph">
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=d42e7156-4efa-4b21-b9b4-addf00feb4b3">Lecture 11/11/2021</a>, <a href="Notes/Lecture19-11.11.2021.pdf">Notes</a></p>
+</div>
+<div class="paragraph">
 <p>Additional Resources:</p>
 </div>
 <div class="ulist">
@@ -65,7 +68,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-11-10 14:00:25 -0500
+Last updated 2021-11-13 10:29:06 -0500
 </div>
 </div>
 </body>
