--- a/week10.html
+++ b/week10.html
@@ -40,8 +40,8 @@ Reorienting a motion. Crossfading.</p>
 </ul>
 </div>
 <div class="paragraph">
-<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=7b4d0b17-f6a1-4242-9f27-add4013712a0">Lecture 11/2/2021</a>, <a href="Notes/Lecture16-11.2.2021">Notes</a>
-<a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=dc936e7f-3ea2-4f29-8b77-add9014e685b">Lecture 11/4/2021</a>, <a href="Notes/Lecture17-11.4.2021">Notes</a></p>
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=7b4d0b17-f6a1-4242-9f27-add4013712a0">Lecture 11/2/2021</a>, <a href="Notes/Lecture16-11.2.2021.pdf">Notes</a>
+<a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=dc936e7f-3ea2-4f29-8b77-add9014e685b">Lecture 11/4/2021</a>, <a href="Notes/Lecture17-11.4.2021.pdf">Notes</a></p>
 </div>
 <div class="paragraph">
 <p>Additional Resources:</p>
@@ -58,7 +58,7 @@ Reorienting a motion. Crossfading.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-11-09 15:10:41 -0500
+Last updated 2021-11-17 09:15:38 -0500
 </div>
 </div>
 </body>
