--- a/schedule.html
+++ b/schedule.html
@@ -715,25 +715,10 @@ Reorienting a motion. Crossfading.</p>
 <div class="ulist">
 <ul>
 <li>
-<p>Open Dynamics Engine (ODE) <a href="http://ode.org/wiki/index.php?title=Manual">Documentation</a></p>
+<p><a href="week12.html">Additional Resources</a></p>
 </li>
 <li>
-<p>Pushing a box: <a href="Labs/ABoxSim1.cpp.txt">Code</a></p>
-</li>
-<li>
-<p>Box with collisions: <a href="Labs/ABoxSim2.cpp.txt">Code</a></p>
-</li>
-<li>
-<p>Mixing kinematic and dynamic boxes: <a href="Labs/ABoxSim3.cpp.txt">Code</a></p>
-</li>
-<li>
-<p><a href="https://graphics.stanford.edu/courses/cs448b-00-winter/papers/phys_model.pdf">Physically Based Modeling SIGGRAPH Course</a></p>
-</li>
-<li>
-<p>Particle Systems. Demos: water, smoke, fireworks, cloth, jello</p>
-</li>
-<li>
-<p>Simple force particle: <a href="Labs/forceParticle.cpp.txt">Code</a></p>
+<p><strong>Assignment 10:</strong> <a href="Labs/Lab10-ik.html">Reach for your goals</a>: <strong>Due Dec 2</strong></p>
 </li>
 <li>
 <p><strong>Quiz4 Nov 18</strong></p>
@@ -745,10 +730,10 @@ Reorienting a motion. Crossfading.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">13</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Nov 23 (No class Thursday, Thanksgiving)</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Steering behaviors</strong> <a id="week13"></a></p>
+<p><strong>Steering</strong> <a id="week13"></a></p>
 </div>
 <div class="paragraph">
-<p>Steering behaviors. Crowd simulation.</p>
+<p>A simple car model. Boids.</p>
 </div>
 <div class="ulist">
 <ul>
@@ -762,12 +747,15 @@ Reorienting a motion. Crossfading.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">14</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Nov 39, Dec 2</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Skinning</strong> <a id="week14"></a></p>
+<p><strong>Character animation tools</strong> <a id="week14"></a></p>
+</div>
+<div class="paragraph">
+<p>Motion capture. Tools for character modeling, skinning, and keyframing.</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
-<p><a href="https://www.skinning.org/direct-methods.pdf">Skinning short course (SIGGRAPH 2014)</a></p>
+<p><a href="https://www.blender.org">Blender</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -776,10 +764,17 @@ Reorienting a motion. Crossfading.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">15</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Dec 7, Dec 9</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Deformers</strong> <a id="week15"></a></p>
+<p><strong>Character animation in game engines</strong> <a id="week15"></a></p>
 </div>
-<div class="paragraph">
-<p>FDD. Blend shapes.</p>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="https://www.unity3d.com">Unity</a></p>
+</li>
+<li>
+<p><a href="https:https://www.unrealengine.com/en-US/">Unity</a></p>
+</li>
+</ul>
 </div></div></td>
 </tr>
 </tbody>
@@ -787,7 +782,7 @@ Reorienting a motion. Crossfading.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-11-13 10:13:28 -0500
+Last updated 2021-11-20 15:13:38 -0500
 </div>
 </div>
 </body>
