--- a/asst10-ik.html
+++ b/asst10-ik.html
@@ -118,7 +118,7 @@ rotations of the interior joints.</p>
 </div>
 <div class="videoblock">
 <div class="content">
-<video src="Labs/ikviewer-2020.ogv" controls>
+<video src="Labs/ikviewer-2020.mp4" controls>
 Your browser does not support the video tag.
 </video>
 </div>
@@ -337,7 +337,7 @@ You can choose to use either solveIKAnalytic or solveIKCCD.</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="Lab/dancer1.gif" alt="dancer1">
+<img src="Labs/dancer1.gif" alt="dancer1">
 </div>
 </div>
 <div class="paragraph">
@@ -541,7 +541,7 @@ videos should be less than 5 MB.
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-11-20 15:02:40 -0500
+Last updated 2021-11-21 11:50:16 -0500
 </div>
 </div>
 <script type="text/x-mathjax-config">
