update class notes

--- a/index.html
+++ b/index.html
@@ -345,7 +345,27 @@ Reorienting a motion. Crossfading.</p>
 <p><strong>Steering</strong> <a id="week13"></a></p>
 </div>
 <div class="paragraph">
-<p>A simple car model. Boids.</p>
+<p>A simple car model.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p><a href="Notes/Lecture22-11.23.2021.pdf">Notes</a></p>
+</li>
+<li>
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=7f309291-4da5-4d64-86af-ade90156f0d1">Video</a></p>
+</li>
+</ul>
+</div></div></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">14</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Nov 30, Dec 2</p></td>
+<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
+<p><strong>Boids, motion capture</strong> <a id="week14"></a></p>
+</div>
+<div class="paragraph">
+<p>Boids. Motion capture technologies.</p>
 </div>
 <div class="ulist">
 <ul>
@@ -356,35 +376,24 @@ Reorienting a motion. Crossfading.</p>
 </div></div></td>
 </tr>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">14</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Nov 39, Dec 2</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">15</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Dec 7, Dec 9</p></td>
 <td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Character animation tools</strong> <a id="week14"></a></p>
+<p><strong>Character animation in game engines</strong> <a id="week15"></a></p>
 </div>
 <div class="paragraph">
-<p>Motion capture. Tools for character modeling, skinning, and keyframing.</p>
+<p>Tools for character modeling, skinning, and keyframing. Character animation techniques in game engines.</p>
 </div>
 <div class="ulist">
 <ul>
 <li>
 <p><a href="https://www.blender.org">Blender</a></p>
 </li>
-</ul>
-</div></div></td>
-</tr>
-<tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">15</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Dec 7, Dec 9</p></td>
-<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p><strong>Character animation in game engines</strong> <a id="week15"></a></p>
-</div>
-<div class="ulist">
-<ul>
 <li>
 <p><a href="https://www.unity3d.com">Unity</a></p>
 </li>
 <li>
-<p><a href="https:https://www.unrealengine.com/en-US/">Unity</a></p>
+<p><a href="https:https://www.unrealengine.com/en-US/">Unreal Engine</a></p>
 </li>
 </ul>
 </div></div></td>
