--- a/week12.html
+++ b/week12.html
@@ -40,19 +40,10 @@
 <p>Open Dynamics Engine (ODE) <a href="http://ode.org/wiki/index.php?title=Manual">Documentation</a></p>
 </li>
 <li>
-<p>Pushing a box: <a href="Labs/ABoxSim1.cpp.txt">Code</a></p>
-</li>
-<li>
-<p>Box with collisions: <a href="Labs/ABoxSim2.cpp.txt">Code</a></p>
-</li>
-<li>
-<p>Mixing kinematic and dynamic boxes: <a href="Labs/ABoxSim3.cpp.txt">Code</a></p>
-</li>
-<li>
-<p>Particle Systems. Demos: water, smoke, fireworks, cloth, jello</p>
-</li>
-<li>
 <p>Simple force particle: <a href="Labs/forceParticle.cpp.txt">Code</a></p>
+</li>
+<li>
+<p>Particle Systems. Unity demos (<a href="https://assetstore.unity.com/packages/essentials/tutorial-projects/unity-particle-pack-127325">Unity standard assets</a>). Install Unity and then install the standard assets package. Drag and drop particle assets from the content browser to the 3D view to add a particle system to your scene to add them to your scene.</p>
 </li>
 </ul>
 </div>
@@ -61,7 +52,7 @@
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-11-20 15:13:20 -0500
+Last updated 2021-11-30 12:20:44 -0500
 </div>
 </div>
 </body>
