--- a/index.html
+++ b/index.html
@@ -370,6 +370,12 @@ Reorienting a motion. Crossfading.</p>
 <div class="ulist">
 <ul>
 <li>
+<p><a href="Notes/Lecture23-11.30.2021.pdf">notes</a></p>
+</li>
+<li>
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=bd6da810-c9c1-4a35-9ad7-adf0014bdda5">Video</a></p>
+</li>
+<li>
 <p><a href="http://www.red3d.com/cwr/steer/gdc99">Boids</a></p>
 </li>
 </ul>
