--- a/schedule.html
+++ b/schedule.html
@@ -758,6 +758,12 @@ Reorienting a motion. Crossfading.</p>
 <div class="ulist">
 <ul>
 <li>
+<p><a href="Notes/Lecture23-11.30.2021.pdf">notes</a></p>
+</li>
+<li>
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=bd6da810-c9c1-4a35-9ad7-adf0014bdda5">Video</a></p>
+</li>
+<li>
 <p><a href="http://www.red3d.com/cwr/steer/gdc99">Boids</a></p>
 </li>
 </ul>
@@ -791,7 +797,7 @@ Reorienting a motion. Crossfading.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-11-30 12:12:59 -0500
+Last updated 2021-11-30 20:48:05 -0500
 </div>
 </div>
 </body>
