--- a/asst10-ik.html
+++ b/asst10-ik.html
@@ -44,7 +44,7 @@
 <p><em>In which, we use inverse kinematics to animate our characters</em></p>
 </div>
 <div class="paragraph">
-<p><strong>Due Thursday, Dec 2, before midnight</strong></p>
+<p><strong>Due Friday, Dec 3, before midnight</strong></p>
 </div>
 <div class="paragraph">
 <p>The goal of this lab is to</p>
@@ -337,7 +337,7 @@ You can choose to use either solveIKAnalytic or solveIKCCD.</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="Labs/dancer1.gif" alt="dancer1">
+<img src="Labc/dancer1.gif" alt="dancer1">
 </div>
 </div>
 <div class="paragraph">
@@ -541,7 +541,7 @@ videos should be less than 5 MB.
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-11-21 11:50:16 -0500
+Last updated 2021-12-01 10:53:27 -0500
 </div>
 </div>
 <script type="text/x-mathjax-config">
