--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
 <div class="ulist">
 <ul>
 <li>
-<p><strong>Assignment 10:</strong> <a href="asst10-ik.html">Reach for your goals</a>: <strong>Due Dec 2</strong></p>
+<p><strong>Assignment 10:</strong> <a href="asst10-ik.html">Reach for your goals</a>: <strong>Extended: Due Dec 3</strong></p>
+</li>
+<li>
+<p><a href="week12-ik-worksheet.html">Lab - IK Worksheet</a>: <strong>Due Dec 2</strong></p>
 </li>
 </ul>
 </div>
@@ -377,6 +380,9 @@ Reorienting a motion. Crossfading.</p>
 </li>
 <li>
 <p><a href="http://www.red3d.com/cwr/steer/gdc99">Boids</a></p>
+</li>
+<li>
+<p><a href="week12-ik-worksheet.html">Lab - IK Worksheet</a></p>
 </li>
 </ul>
 </div></div></td>
@@ -742,7 +748,7 @@ know that help and support are available. Staff members are trained to support s
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-11-20 15:09:33 -0500
+Last updated 2021-12-01 10:52:57 -0500
 </div>
 </div>
 </body>
