--- a/schedule.html
+++ b/schedule.html
@@ -766,6 +766,9 @@ Reorienting a motion. Crossfading.</p>
 <li>
 <p><a href="http://www.red3d.com/cwr/steer/gdc99">Boids</a></p>
 </li>
+<li>
+<p><a href="week12-ik-worksheet.html">Lab - IK Worksheet</a></p>
+</li>
 </ul>
 </div></div></td>
 </tr>
@@ -797,7 +800,7 @@ Reorienting a motion. Crossfading.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-11-30 20:48:05 -0500
+Last updated 2021-12-01 10:52:24 -0500
 </div>
 </div>
 </body>
