--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ Reorienting a motion. Crossfading.</p>
 <p><a href="week12.html">Additional Resources</a></p>
 </li>
 <li>
-<p><strong>Assignment 10:</strong> <a href="Labs/Lab10-ik.html">Reach for your goals</a>: <strong>Due Dec 2</strong></p>
+<p><strong>Assignment 10:</strong> <a href="asst10-ik.html">Reach for your goals</a>: <strong>Due Dec 2</strong></p>
 </li>
 <li>
 <p><strong>Quiz4 Nov 18</strong></p>
