--- a/schedule.html
+++ b/schedule.html
@@ -716,7 +716,7 @@ Reorienting a motion. Crossfading.</p>
 <p><a href="week12.html">Additional Resources</a></p>
 </li>
 <li>
-<p><strong>Assignment 10:</strong> <a href="Labs/Lab10-ik.html">Reach for your goals</a>: <strong>Due Dec 2</strong></p>
+<p><strong>Assignment 10:</strong> <a href="asst10-ik.html">Reach for your goals</a>: <strong>Due Dec 2</strong></p>
 </li>
 <li>
 <p><strong>Quiz4 Nov 18</strong></p>
@@ -801,7 +801,7 @@ Reorienting a motion. Crossfading.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-04 16:04:08 -0500
+Last updated 2021-12-05 19:38:39 -0500
 </div>
 </div>
 </body>
